# hDDS

./: README.md  hdds.cabal  stack.yaml
Codec/Image/: DDS.hs
cbits/: ddslib.c  ddslib.h
